crates/targets/tests/snapshots/renderers__codex.snap
---
source: crates/targets/tests/renderers.rs
expression: snapshot(&output)
---
===== AGENTS.md [codex@1] =====
# Codex Instructions

Project: `fixture-app`

## project

Run tests before committing.
===== .agents/skills/testing/SKILL.md [codex@1] =====
---
name: testing
---
Test carefully.
===== .codex/config.toml [codex@1] =====
model = "gpt-5.6-codex"
model_reasoning_effort = "high"
web_search = "cached"
approval_policy = "on-request"
sandbox_mode = "workspace-write"

[sandbox_workspace_write]
network_access = true

[mcp_servers.github]
command = "github-mcp-server"
args = ["stdio"]
env_vars = ["GITHUB_TOKEN"]
===== .codex/agents/reviewer.toml [codex@1] =====
name = "reviewer"
description = "Review correctness and security"
developer_instructions = "Inspect the diff and report findings."

[[skills.config]]
path = "../../.agents/skills/testing/SKILL.md"
enabled = true
