crates/targets/tests/snapshots/renderers__copilot_cli.snap
---
source: crates/targets/tests/renderers.rs
expression: snapshot(&output)
---
===== .github/copilot-instructions.md [copilot@1] =====
# GitHub Copilot Instructions

Project: `fixture-app`

## project

Run tests before committing.
===== .github/skills/testing/SKILL.md [copilot@1] =====
---
name: testing
---
Test carefully.
===== .github/mcp.json [copilot@1] =====
{
  "mcpServers": {
    "github": {
      "args": [
        "stdio"
      ],
      "command": "github-mcp-server",
      "env": {
        "GITHUB_TOKEN": "${GITHUB_TOKEN}"
      },
      "type": "stdio"
    }
  }
}
===== .github/agents/reviewer.agent.md [copilot@1] =====
---
description: Review correctness and security
name: reviewer
---

Inspect the diff and report findings.
